FreeST/test/Programs/ValidTests/Modules/Diamond/Diamond.fst
module Diamond where 

import A 
import B 

main : Int 
main = a + b 