FreeST/test/Programs/InvalidTests/Modules/ErrorMod2/ErrorMod2.fst
module ErrorMod2 where


import Mod2


main : Int
main = g 2
